Feat: Agrega componente preview variable
para visualizar la variable que se esta creando - se usa componente preview-variable

--- a/src/app/modules/admin/containers/add-variables/add-variables.component.html
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.html
@@ -17,7 +17,10 @@
       (ngSubmit)="onConfirm()"
     >
       <!-- btn expandir-------------- -->
-      <div class="add-variable__expanse-conteiner">
+      <div
+        class="add-variable__expanse-conteiner"
+        (click)="toggleFlagPreview(true)"
+      >
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
@@ -298,4 +301,10 @@
     [show]="showDialog"
     (selection)="onSelection($event)"
   ></app-confirm-out-modal>
+  <app-preview-variable
+    *ngIf="flagPreview"
+    [variableValue]="newVariable.value"
+    (goOutPreview)="onGoOutPreview($event)"
+  >
+  </app-preview-variable>
 </section>
