Refactor: descomenta boron eliminar reporte

--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -109,9 +109,9 @@
         </div>
         <div class="modal__options">
             <button class="btn-modal__cancel" (click)="close()">Cancelar</button>
-            <!-- <button class="btn-modal__accept" (click)="deleteUser()">
+            <button class="btn-modal__accept" (click)="deleteReport()">
                 Confirmar y eliminar
-            </button> -->
+            </button>
         </div>
     </div>
 </section>
