Refactor: quita class   list-reports__cell--reportsmiddle"

--- a/src/app/modules/admin/containers/reports/reports.component.html
+++ b/src/app/modules/admin/containers/reports/reports.component.html
@@ -34,7 +34,7 @@
                     <div class="list-reports__cell list-reports__cell--reports">
                         {{ element.nombre}}
                     </div>
-                    <div class="list-reports__cell list-reports__cell--reports list-reports__cell--reportsmiddle">
+                    <div class="list-reports__cell list-reports__cell--reports ">
                         {{ element.fechaCreacion | date: 'dd/MM/yyyy'}}
                     </div>
                     <div class="list-reports__cell list-reports__cell--acction">
