--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -27,6 +27,7 @@ $color-line-down-header: #344d64;
 $color-4: #1e1e1e;
 $btn-confirm-bg: #92cdef;
 $outline-focus: #8ac9ee;
+$outline-focus-center: #1966d298;
 $alert-text: #e41a26;
 
 $tipografy: "Futura Bk BT", Roboto, "Helvetica Neue", sans-serif;
