--- a/src/app/modules/admin/components/preview-variable/preview-variable.component.scss
+++ b/src/app/modules/admin/components/preview-variable/preview-variable.component.scss
@@ -39,6 +39,11 @@
   }
 }
 .variable {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
   .variable__title {
     display: flex;
     align-items: center;
@@ -79,11 +84,7 @@
   justify-content: space-between;
   align-items: center;
   margin-top: 79px;
-  input[type="number"]::-webkit-inner-spin-button,
-  input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-  }
+
   .number-genre__input {
     padding: 4px 12px;
     width: 219px;
@@ -118,9 +119,28 @@
     align-items: center;
   }
 }
+.number {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 85px;
+  .number__input {
+    padding: 4px 12px;
+    width: 219px;
+    height: 52px;
+    background: #ffffff;
+    border: 1px solid #79747e;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    text-align: center;
+    outline-color: $outline-focus-center;
+    font-size: 20px;
+    font-weight: 400;
+  }
+}
 .observations {
   display: flex;
-  margin-top: 93px;
+  margin-top: 85px;
 
   .observations__label {
     font-size: 20px;
