--- a/src/app/modules/admin/components/preview-variable/preview-variable.component.scss
+++ b/src/app/modules/admin/components/preview-variable/preview-variable.component.scss
@@ -122,7 +122,6 @@
 .number {
   display: flex;
   justify-content: center;
-  align-items: center;
   margin-top: 85px;
   .number__input {
     padding: 4px 12px;
@@ -136,6 +135,24 @@
     outline-color: $outline-focus-center;
     font-size: 20px;
     font-weight: 400;
+  }
+}
+.textual {
+  display: flex;
+  justify-content: center;
+  margin-top: 85px;
+  .textual__input {
+    padding: 4px 12px;
+    width: 100%;
+    max-width: 849px;
+    min-height: 52px;
+    background: #ffffff;
+    border: 1px solid #79747e;
+    box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
+    outline-color: $outline-focus-center;
+    font-size: 20px;
+    font-weight: 400;
+    border-radius: 10px;
   }
 }
 .observations {
