--- a/src/app/modules/admin/components/preview-variable/preview-variable.component.scss
+++ b/src/app/modules/admin/components/preview-variable/preview-variable.component.scss
@@ -60,7 +60,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 92px;
+    margin-top: 65px;
     .variable__index {
       font-size: 20px;
       padding-top: 7px;
@@ -83,7 +83,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 79px;
+  margin-top: 70px;
 
   .number-genre__input {
     padding: 4px 12px;
@@ -122,7 +122,7 @@
 .number {
   display: flex;
   justify-content: center;
-  margin-top: 85px;
+  margin-top: 70px;
   .number__input {
     padding: 4px 12px;
     width: 219px;
@@ -139,8 +139,9 @@
 }
 .textual {
   display: flex;
-  justify-content: center;
-  margin-top: 85px;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 70px;
   .textual__input {
     padding: 4px 12px;
     width: 100%;
@@ -155,9 +156,41 @@
     border-radius: 10px;
   }
 }
+.value-scale {
+  margin-top: 25px;
+  .value-scale__title {
+    font-size: 16px;
+    text-align: center;
+  }
+  .value-scale__conteiner {
+    display: flex;
+    .value-scale__tag {
+      font-size: 14px;
+      align-self: flex-end;
+      margin-bottom: 7px;
+    }
+    .value-scale__radio-group {
+      padding: 0 30px;
+      .value-scale__radio-btn {
+        margin: 0 30px;
+        ::ng-deep .mat-radio-label {
+          display: flex;
+          flex-direction: column-reverse;
+          .mat-radio-label-content {
+            padding: 0;
+            margin-bottom: 21px;
+          }
+        }
+      }
+      .value-scale__radio-btn--larger {
+        margin: 0 20px;
+      }
+    }
+  }
+}
 .observations {
   display: flex;
-  margin-top: 85px;
+  margin-top: 70px;
 
   .observations__label {
     font-size: 20px;
@@ -169,7 +202,7 @@
     width: 100%;
     max-width: 830.68px;
     min-height: 71px;
-    max-height: 160px;
+    max-height: 130px;
     border: 1px solid #79747e;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
