Feat: maqueta layout para directores de centros
contiene navbar de user y header general

--- a/src/app/core/layouts/containers/user-layout/user-layout.component.html
+++ b/src/app/core/layouts/containers/user-layout/user-layout.component.html
@@ -1,1 +1,5 @@
-<p>user-layout works!</p>
+<app-header-general></app-header-general>
+<app-user-navbar></app-user-navbar>
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
