--- a/src/app/modules/admin/components/preview-variable/preview-variable.component.scss
+++ b/src/app/modules/admin/components/preview-variable/preview-variable.component.scss
@@ -14,8 +14,9 @@
     position: relative;
     width: 100%;
     max-width: 1107px;
-    height: 739px;
-    margin: 0 20px;
+    height: 100%;
+    max-height: 739px;
+    margin: 20px 20px;
     background: #ffffff;
     box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 5px;
@@ -39,10 +40,13 @@
   }
 }
 .variable {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
   input[type="number"]::-webkit-inner-spin-button,
   input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
-    margin: 0;
   }
   .variable__title {
     display: flex;
@@ -60,7 +64,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 65px;
+    // margin-top: 65px;
     .variable__index {
       font-size: 20px;
       padding-top: 7px;
@@ -83,8 +87,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 70px;
-
   .number-genre__input {
     padding: 4px 12px;
     width: 219px;
@@ -122,7 +124,6 @@
 .number {
   display: flex;
   justify-content: center;
-  margin-top: 70px;
   .number__input {
     padding: 4px 12px;
     width: 219px;
@@ -141,7 +142,6 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 70px;
   .textual__input {
     padding: 4px 12px;
     width: 100%;
@@ -190,8 +190,6 @@
 }
 .observations {
   display: flex;
-  margin-top: 70px;
-
   .observations__label {
     font-size: 20px;
     margin-right: 8px;
