--- a/src/app/modules/admin/containers/add-variables/add-variables.component.html
+++ b/src/app/modules/admin/containers/add-variables/add-variables.component.html
@@ -18,6 +18,7 @@
     >
       <!-- btn expandir-------------- -->
       <div
+        matTooltip="Vista previa"
         class="add-variable__expanse-conteiner"
         (click)="toggleFlagPreview(true)"
       >
