--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.scss
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.scss
@@ -22,9 +22,21 @@
 }
 .list {
   max-width: 997px;
-  width: 100%;
+  max-height: 285px;
   margin-top: 90px;
   margin-left: 300px;
+  overflow: scroll;
+  &::-webkit-scrollbar {
+    width: 10px; /* width of the entire scrollbar */
+  }
+  &::-webkit-scrollbar-track {
+    background: rgb(255, 255, 255); /* color of the tracking area */
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #d9d9d9; /* color of the scroll thumb */
+    border-radius: 50px; /* roundness of the scroll thumb */
+    border: 1px solid #ffffff; /* creates padding around scroll thumb */
+  }
   .list__row-header {
     min-height: 48px;
     display: grid;
@@ -58,5 +70,29 @@
       justify-self: flex-start;
       padding-left: 32px;
     }
+  }
+}
+@media (max-width: 1400px) {
+  .pending-reports {
+    .pending-reports__title {
+      margin-top: 65px;
+      margin-left: 130px;
+    }
+  }
+  .list {
+    margin-top: 50px;
+    margin-left: 190px;
+  }
+}
+@media (max-width: 1024px) {
+  .pending-reports {
+    .pending-reports__title {
+      margin-top: 50px;
+      margin-left: 70px;
+    }
+  }
+  .list {
+    margin-top: 40px;
+    margin-left: 130px;
   }
 }
