--- a/src/app/modules/admin/containers/selecs-axes-variables/selecs-axes-variables.component.html
+++ b/src/app/modules/admin/containers/selecs-axes-variables/selecs-axes-variables.component.html
@@ -1,7 +1,7 @@
 <div class="container-ejes" id="select-ejes">
     <mat-select class="mat-select-ejes" placeholder="Selecciona un Eje de Variables" [(value)]="axe"
         name="eje" (selectionChange)="capturarEje($event.value)">
-        <mat-option [value]="item.id" *ngFor="let item of listOfAxes">{{item.nombre}}</mat-option>
+        <mat-option [value]="item" *ngFor="let item of listOfAxes">{{item.nombre}}</mat-option>
     </mat-select>
     <mat-select [disabled]="!axe" class="mat-select-ejes" placeholder="Selecciona una o más."
         multiple="" [(value)]="variables" name="variables"
