--- a/src/app/modules/admin/containers/preview-report/preview-report.component.scss
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.scss
@@ -125,11 +125,13 @@
             }
 
             .label-centros {
-                width: 111px;
+                width: 15%;
                 height: 20.18px;
                 border: 1px solid #1967D2;
                 border-radius: 30px;
-                text-align: center;
+                // text-align: center;
+                justify-content: center;
+                display: flex;
             }
         }
 
