--- a/src/app/modules/admin/containers/preview-report/preview-report.component.html
+++ b/src/app/modules/admin/containers/preview-report/preview-report.component.html
@@ -1,56 +1,71 @@
-<div class="container-preview " [ngClass]="{'modal' : newname}">
-    <div *ngIf="!newname">
-        <h1>Previsualización de Reporte Creado</h1>
-    </div>
-    <div class="container-preview-reporte">
-        <section class="container-header-preview">
-            <div class="logo-mdp">
-                <img src="/assets/images/logo-MDP.png" alt="logo-MDP" style="width: 113px;
-                height: 49px;">
-            </div>
-            <label class="label-repor-name">Reporte {{name}} </label>
-            <div class="periodo">
-                <p>Periodo</p>
-                <label>{{desde}} A {{hasta}}</label>
-            </div>
-        </section>
-        <section class="container-centros-preview ">
-            <div class="centros-Alcanzados">
-                <p>Centros Alcanzados:</p>
-                <p class="label-centros" *ngFor="let item of centros">{{item}}</p>
-            </div>
-            <div class="fecha-entrega">
-                <label style="display: flex; margin-top: 4px;">Fecha de Entrega (Alerta) <mat-icon
-                        style="color:#FFBD12 ; font-size: 16px ;">notification_important</mat-icon></label>
-                <p>02/01/2023</p>
-            </div>
-        </section>
-        <section class="section-ejes-variables">
-            <div class="container-ejes-variables" *ngFor="let item of ejes">
-                <label class="ejes-preview">{{item}}</label>
-                <div class="variables-preview">
-                    <p class="p-variables" *ngFor="let item of variables">{{item}}</p>
-                </div>
-            </div>
-        </section>
-        <section style="border-top: 2px solid  #D9D9D9; margin-top: 20px ;">
-            <div class="buttons">
-                <button class="button" mat-button (click)="confirm()">Enviar</button> 
-                <button *ngIf="newname" (click)="cancel()" class="button"mat-button>Cerrar</button>
-                <button *ngIf="!newname" (click)="backAddReport()" class="button"mat-button>Cerrar</button>
-            </div>
-        </section>
-    </div>
-    <div *ngIf="flag" class="modal-2">
-        <label>Confirmar envio</label>
-        <p>Centro la balsa</p>
-        <label class="label" type="text" disabled>gonzalogonzalez@mdp.com</label>
-        <p>H.San jose</p>
-        <label class="label" type="text" disabled>gonzalogonzalez@mdp.com</label>
-        <button mat-button (click)="enviar()">Confirmar</button>
-    </div>
-    <div *ngIf="flag" class="overlay"></div>
-
+<div class="container-preview" [ngClass]="{ modal: newname }">
+  <div *ngIf="!newname">
+    <h1>Previsualización de Reporte Creado</h1>
+  </div>
+  <div class="container-preview-reporte">
+    <section class="container-header-preview">
+      <div class="logo-mdp">
+        <img
+          src="/assets/images/logo-MDP.png"
+          alt="logo-MDP"
+          style="width: 113px; height: 49px"
+        />
+      </div>
+      <label class="label-repor-name">Reporte {{ name }} </label>
+      <div class="periodo">
+        <p>Periodo</p>
+        <label>{{ desde }} A {{ hasta }}</label>
+      </div>
+    </section>
+    <section class="container-centros-preview">
+      <div class="centros-Alcanzados">
+        <p>Centros Alcanzados:</p>
+        <p class="label-centros" *ngFor="let item of centros">{{ item }}</p>
+      </div>
+      <div class="fecha-entrega">
+        <label style="display: flex; margin-top: 4px"
+          >Fecha de Entrega (Alerta)
+          <mat-icon style="color: #ffbd12; font-size: 16px"
+            >notification_important</mat-icon
+          ></label
+        >
+        <p>02/01/2023</p>
+      </div>
+    </section>
+    <section class="section-ejes-variables">
+      <div class="container-ejes-variables" *ngFor="let item of ejes">
+        <label class="ejes-preview">{{ item }}</label>
+        <div class="variables-preview">
+          <p class="p-variables" *ngFor="let item of variables">{{ item }}</p>
+        </div>
+      </div>
+    </section>
+    <section style="border-top: 2px solid #d9d9d9; margin-top: 20px">
+      <div class="buttons">
+        <button class="button" mat-button (click)="confirm()">Enviar</button>
+        <button *ngIf="newname" (click)="cancel()" class="button" mat-button>
+          Cerrar
+        </button>
+        <button
+          *ngIf="!newname"
+          (click)="backAddReport()"
+          class="button"
+          mat-button
+        >
+          Cerrar
+        </button>
+      </div>
+    </section>
+  </div>
+  <div *ngIf="flag" class="modal-2">
+    <label>Confirmar envio</label>
+    <p>Centro la balsa</p>
+    <label class="label" type="text" disabled>gonzalogonzalez@mdp.com</label>
+    <p>H.San jose</p>
+    <label class="label" type="text" disabled>gonzalogonzalez@mdp.com</label>
+    <button mat-button (click)="enviar()">Confirmar</button>
+  </div>
+  <div *ngIf="flag" class="overlay"></div>
 </div>
 
 <div *ngIf="newname" class="overlay"></div>
