Style: Cambia active en reporte seleccionado
Se coloca fondo blanco y letra celeste

--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.scss
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.scss
@@ -80,9 +80,9 @@
     }
   }
   .list__row-item--active {
-    background-color: $color-bg-hover-primary;
+    // background-color: $color-bg-hover-primary;
     .list__item {
-      color: #ffffff;
+      color: #50b3ed;
     }
   }
 }
