Refactor: descomenta mat-error contrasena

--- a/src/app/modules/admin/containers/am-user/am-user.component.html
+++ b/src/app/modules/admin/containers/am-user/am-user.component.html
@@ -21,10 +21,10 @@
         <section class="container-password">
             <label>Contraseña (al menos 8 caracteres) *</label>
             <input type="password" formControlName="contrasena" [(ngModel)]="contrasena" placeholder="jimena123456" autocomplete="off">
-            <!-- <mat-error *ngIf="formUpEdit.controls['contrasena'].invalid && formUpEdit.controls['contrasena'].dirty">
+             <mat-error *ngIf="formUpEdit.controls['contrasena'].invalid && formUpEdit.controls['contrasena'].dirty">
                 <span *ngIf="formUpEdit.controls['contrasena'].hasError('required')">Requerido</span>
                 <span *ngIf="formUpEdit.controls['contrasena'].hasError('minLength')">Minimo 8 caracteres</span>
-            </mat-error> -->
+            </mat-error> 
             <label class="labelDatoObligatorio"> *Dato obligatorio</label>
         </section>
         <ng-container *ngIf="!flagEdit">
