Style: reduce el tamaño del navbar para vw menor a 1400px
Para que este navbar se visualize completo en pantallas de 800px de vh

--- a/src/app/core/layouts/components/user-navbar/user-navbar.component.scss
+++ b/src/app/core/layouts/components/user-navbar/user-navbar.component.scss
@@ -215,6 +215,8 @@
 }
 @media (max-width: 1400px) {
   .navbar {
+    font-size: 12px;
+    top: 145px;
     .navbar__list {
       .navbar__item {
         .navbar__link {
