Feat: agrega componente app-pop-up-no-exist
Se muestra este pop up si no existe ningun reporte pendiente

--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.scss
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   width: 100%;
   .pending-reports__conteiner {
+    min-width: 900px;
     .pending-reports__title {
       width: 428px;
       height: 80px;
