--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.html
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.html
@@ -1,7 +1,8 @@
 <section class="pending-reports">
   <div class="pending-reports__conteiner">
     <h1 class="pending-reports__title">REPORTES PENDIENTES</h1>
-    <div class="list">
+    <app-pop-up-no-exist *ngIf="list.length === 0"></app-pop-up-no-exist>
+    <div class="list" *ngIf="list.length !== 0">
       <ul class="list__row-header">
         <li class="list__header">Reporte Numero</li>
         <li class="list__header">Reporte asignado para centro</li>
@@ -24,7 +25,7 @@
         <li class="list__item">{{ item.limitDate }}</li>
       </ul>
     </div>
-    <div class="report">
+    <div class="report" *ngIf="list.length !== 0">
       <div class="report__conteiner">
         <ul class="report__info">
           <li class="report__item">Reporte</li>
