--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.html
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.html
@@ -62,7 +62,7 @@
           class="report__btn-restart"
           color="primary"
           type="submit"
-          (click)="onStartReport()"
+          (click)="onDeleteReport(true)"
           [disabled]="reportToShow.lastAxeComplete === 0"
         >
           Volver a empezar
@@ -70,4 +70,9 @@
       </div>
     </div>
   </div>
+  <app-pop-up-delete-report
+    *ngIf="flagDeleteReport"
+    (goOut)="onDeleteReport(!$event)"
+  >
+  </app-pop-up-delete-report>
 </section>
