Feat: Agrega modal de inicio de carga de reporte
Con settimeOut de 6seg para navegar a la carga de reporte

--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.html
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.html
@@ -75,4 +75,5 @@
     (goOut)="onDeleteReport(!$event)"
   >
   </app-pop-up-delete-report>
+  <app-pop-up-start *ngIf="flagStartReport"> </app-pop-up-start>
 </section>
