Crea conteiner para carga de reportes
tambien modifica ruta para navegar con id de reporte hacia esta ruta

--- a/src/app/modules/user/containers/pending-reports/pending-reports.component.html
+++ b/src/app/modules/user/containers/pending-reports/pending-reports.component.html
@@ -75,5 +75,8 @@
     (goOut)="onDeleteReport(!$event)"
   >
   </app-pop-up-delete-report>
-  <app-pop-up-start *ngIf="flagStartReport"> </app-pop-up-start>
+  <app-pop-up-start
+    *ngIf="flagStartReport"
+    [idReport]="reportToShow.id"
+  ></app-pop-up-start>
 </section>
